--- a/img/portifolio.css
+++ b/img/portifolio.css
@@ -1,7 +1,7 @@
 body{
 
 	background-color:#00201fff;
-	background-image: url(./img/mine.jpg);
+	background-image: url(mine.jpg);
 	background-repeat: no-repeat;
     overflow: scroll;
 }
